--- a/site/src/work/photography/photography.css
+++ b/site/src/work/photography/photography.css
@@ -1,8 +1,5 @@
 :root {
     --bg-color: rgb(2,2,2);
-
-    --image-spacing: 2rem;
-
 }
 h1 {
     text-align: center;
